SKRIT-456: Fix horizontal scrolling on mobile app.

--- a/app/gelato/styles/application.scss
+++ b/app/gelato/styles/application.scss
@@ -132,6 +132,8 @@ gelato-application {
 
 
   &.mobile {
+    overflow-x: hidden;
+
     * {
       -webkit-touch-callout: none;
       -webkit-user-select: none;
